[workspace]
members = [
    "src/chat",
    "src/cmd",
    "src/engine-core-client",
    "src/llm",
    "src/metrics",
    "src/openai-server",
    "src/text",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
arc-swap = "1.9.0"
async-openai = "0.33.1"
async-trait = "0.1.89"
axum = "0.8.8"
bytes = "1.11.1"
clap = { version = "4.5.38", features = ["derive", "env"] }
easy-ext = "1.0.3"
enum-as-inner = "0.7.0"
expect-test = "1.5.1"
fastokens = "0.1.0"
futures = "0.3.31"
futures-async-stream = "0.2.13"
hex = "0.4.3"
hf-hub = { version = "0.5.0", features = ["tokio"] }
http-body = "1.0.1"
libc = "0.2.177"
openai-protocol = { version = "1.4.0", features = ["axum"] }
parking_lot = "0.12.5"
prometheus-client = "0.24.0"
prometheus-client-derive-encode = "0.5.0"
reasoning-parser = "1.2.1"
rmp-serde = "1.3.1"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_default = "0.2.0"
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_tuple = "1.1.3"
smg-tokenizer = { package = "llm-tokenizer", version = "1.3.0" }
subenum = "1.1.3"
tempfile = "3.23.0"
thiserror = "2.0.16"
thiserror-ext = "0.3.0"
tokenizers = "0.22.0"
tokio = { version = "1.47.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tool-parser = "1.1.2"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.22.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
vllm-chat = { path = "src/chat" }
vllm-engine-core-client = { path = "src/engine-core-client" }
vllm-llm = { path = "src/llm" }
vllm-metrics = { path = "src/metrics" }
vllm-openai-server = { path = "src/openai-server" }
vllm-text = { path = "src/text" }
zeromq = { version = "0.6.0-pre.1", default-features = false, features = [
    "tokio-runtime",
    "all-transport",
] }

[workspace.lints.clippy]
too_many_arguments = "allow"
