[package]
name = "vllm-chat-renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
indexmap.workspace = true
itertools.workspace = true
minijinja.workspace = true
minijinja-contrib.workspace = true
openai-harmony.workspace = true
serde.workspace = true
serde-json-fmt.workspace = true
serde_json.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true
thiserror-ext.workspace = true
time.workspace = true
tracing.workspace = true
vllm-chat-types.workspace = true
vllm-tokenizer.workspace = true

[dev-dependencies]
expect-test.workspace = true
tempfile.workspace = true

[lints]
workspace = true
